# django-tree-comments

./: LICENSE  README.md  pyproject.toml
tests/: settings.py  test_models.py  test_serializers.py  test_signals.py  test_viewsets.py  urls.py
tests/app/: models.py  serializers.py  views.py
tests/default_app/: serializers.py
tree_comments/: __init__.py  models.py  serializers.py  signals.py  viewsets.py
